// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListCard should render successfully with icons 1`] = `
<DocumentFragment>
  <div
    data-rbd-droppable-context-id="1"
    data-rbd-droppable-id="test-droppable"
  >
    <div
      aria-describedby="rbd-hidden-text-1-hidden-text-3"
      data-rbd-drag-handle-context-id="1"
      data-rbd-drag-handle-draggable-id="1"
      data-rbd-draggable-context-id="1"
      data-rbd-draggable-id="1"
      data-testid="list-card-container"
      draggable="false"
      role="button"
      tabindex="0"
    >
      <div
        class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
      >
        <p>
          Test Card
        </p>
        <div
          class="pt-2 text-xs flex flex-wrap gap-1"
        >
          <div
            class="rounded-ibsm p-1"
            style="background: rgb(238, 238, 238);"
          >
            Tag 1
          </div>
          <div
            class="rounded-ibsm p-1"
            style="background: rgb(0, 0, 0);"
          >
            Tag 2
          </div>
        </div>
        <div
          class="flex items-center space-x-2 text-gray-600 pt-2"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="2.18"
              width="23.08"
              x="0.46"
              y="3.06"
            />
            <rect
              height="2.18"
              width="23.08"
              x="0.46"
              y="8.29"
            />
            <rect
              height="2.18"
              width="23.08"
              x="0.46"
              y="13.53"
            />
            <rect
              height="2.18"
              width="15.81"
              x="0.46"
              y="18.76"
            />
          </svg>
          <div
            class="flex justify-center"
          >
            <svg
              fill="currentColor"
              height="20"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 1024 1024"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M779.3 196.6c-94.2-94.2-247.6-94.2-341.7 0l-261 260.8c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l261-260.8c32.4-32.4 75.5-50.2 121.3-50.2s88.9 17.8 121.2 50.2c32.4 32.4 50.2 75.5 50.2 121.2 0 45.8-17.8 88.8-50.2 121.2l-266 265.9-43.1 43.1c-40.3 40.3-105.8 40.3-146.1 0-19.5-19.5-30.2-45.4-30.2-73s10.7-53.5 30.2-73l263.9-263.8c6.7-6.6 15.5-10.3 24.9-10.3h.1c9.4 0 18.1 3.7 24.7 10.3 6.7 6.7 10.3 15.5 10.3 24.9 0 9.3-3.7 18.1-10.3 24.7L372.4 653c-1.7 1.7-2.6 4-2.6 6.4s.9 4.7 2.6 6.4l36.9 36.9a9 9 0 0 0 12.7 0l215.6-215.6c19.9-19.9 30.8-46.3 30.8-74.4s-11-54.6-30.8-74.4c-41.1-41.1-107.9-41-149 0L463 364 224.8 602.1A172.22 172.22 0 0 0 174 724.8c0 46.3 18.1 89.8 50.8 122.5 33.9 33.8 78.3 50.7 122.7 50.7 44.4 0 88.8-16.9 122.6-50.7l309.2-309C824.8 492.7 850 432 850 367.5c.1-64.6-25.1-125.3-70.7-170.9z"
              />
            </svg>
            <span
              class="text-sm"
            >
              1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListCard should render successfully with no icons 1`] = `
<DocumentFragment>
  <div
    data-rbd-droppable-context-id="0"
    data-rbd-droppable-id="test-droppable"
  >
    <div
      aria-describedby="rbd-hidden-text-0-hidden-text-0"
      data-rbd-drag-handle-context-id="0"
      data-rbd-drag-handle-draggable-id="1"
      data-rbd-draggable-context-id="0"
      data-rbd-draggable-id="1"
      data-testid="list-card-container"
      draggable="false"
      role="button"
      tabindex="0"
    >
      <div
        class="flex flex-col shadow bg-white hover:bg-trello-gray-400 cursor-pointer rounded-md p-2 my-1.5 break-words"
      >
        <p>
          Test Card
        </p>
        <div
          class="pt-2 text-xs flex flex-wrap gap-1"
        >
          <div
            class="rounded-ibsm p-1"
            style="background: rgb(238, 238, 238);"
          >
            Tag 1
          </div>
          <div
            class="rounded-ibsm p-1"
            style="background: rgb(0, 0, 0);"
          >
            Tag 2
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
